--- a/angular-app/src/app/SetupDemo/SetupDemo.component.html
+++ b/angular-app/src/app/SetupDemo/SetupDemo.component.html
@@ -17,7 +17,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="addTransactionModalLabel">Create Transaction</h4>
-        <p class="modal-intro">Enter the required values below.</p>
+        <!-- <p class="modal-intro">Enter the required values below.</p> -->
       </div>
       <form [formGroup]="myForm">
         <div class="modal-body">
@@ -56,7 +56,7 @@
     <div class="col-md-12">
       <div class="row">
         <div class="col-md-12">
-          When invoked, this transaction will have the following attributes:
+          <!-- When invoked, this transaction will have the following attributes: -->
           <br>
           <ul>
             
