--- a/angular-app/src/app/about/about.component.html
+++ b/angular-app/src/app/about/about.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">  
    <h3 style ="font-family: 'Source Sans Pro Light', sans-serif; ">
-    Coupon Payment system made with Hyperledger Fabric.</h3>
+    Coupon Payment system developed with Hyperledger Composer.</h3>
+    <img [src]="url" alt="background" class="bg">
   </div> 
 
   
