--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -19,6 +19,9 @@
       <!-- <img src="{{dataholder.path}}" style="width: 50%"> -->
       <!-- <p class="network-name">This is a tagline</p> -->
       <h2 class="navbar-brand" style="color: #9900E5; font-family: 'Source Sans Pro Bold', sans-serif;">Bond-blockchain-network</h2> 
+      <div class="img-p">
+        <img [src]="url" width="400" height="175">
+  </div>
     
     </div>
     <ul class="nav navbar-nav">
