--- a/angular-app/src/app/Bond/Bond.component.html
+++ b/angular-app/src/app/Bond/Bond.component.html
@@ -342,14 +342,14 @@
         <h1 class="asset-title" id='assetName'>Bond</h1>
     </div>
     <div class="col-md-3">
-      <button (click)="resetForm()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addAssetModal">
+      <!--<button (click)="resetForm()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addAssetModal">
           <span style="font-size: 14px;font-family: inherit;border-right:1px solid rgba(255,255,255,0.5);padding-right:0.6em;margin-right:0.5em;vertical-align:middle;">
               <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10">
                 <path fill-rule="evenodd" d="M5.5,4.5 L9.5,4.5 L10,4.5 L10,5.5 L9.5,5.5 L5.5,5.5 L5.5,9.5 L5.5,10 L4.5,10 L4.5,9.5 L4.5,5.5 L0.5,5.5 L0,5.5 L0,4.5 L0.5,4.5 L4.5,4.5 L4.5,0.5 L4.5,0 L5.5,0 L5.5,0.5 L5.5,4.5 Z"/>
               </svg>
           </span>
         Create Asset
-      </button>
+      </button>-->
     </div>
   </div>
   <br>
@@ -383,7 +383,7 @@
             
                 <th class="info">matured</th>
             
-              <th class="info-actions">Actions</th>
+             <!--<th class="info-actions">Actions</th>--> 
           </tr>
         </thead>
         <tbody>
@@ -413,7 +413,7 @@
                 <td class="asset-properties">{{asset.nextPaymentDate}}</td>
             
                 <td class="asset-properties">{{asset.matured}}</td>
-            
+            <!--
             <td>
               <button (click)="getForm(asset.ISIN);" type="button" class="btn btn-update" data-toggle="modal" data-target="#updateAssetModal">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -438,7 +438,7 @@
                  c1.7,0,3-1.3,3-3S64.5,10.3,62.9,10.3z M43.3,10.3H22.6V6h20.7L43.3,10.3L43.3,10.3z"/>
                </svg>
               </button>
-            </td>
+            </td>-->
           </tr>
         </tbody>
       </table>
