--- a/angular-app/src/app/Regulator/Regulator.component.html
+++ b/angular-app/src/app/Regulator/Regulator.component.html
@@ -143,14 +143,14 @@
           <h1 class="participant-title" id='participantName'>Regulator</h1>
       </div>
       <div class="col-md-3">
-        <button (click)="resetForm()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addParticipantModal">
+       <!-- <button (click)="resetForm()" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addParticipantModal">
             <span style="font-size: 14px;font-family: inherit;border-right:1px solid rgba(255,255,255,0.5);padding-right:0.6em;margin-right:0.5em;vertical-align:middle;">
                 <svg class="plus-svg" xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10">
                   <path fill-rule="evenodd" d="M5.5,4.5 L9.5,4.5 L10,4.5 L10,5.5 L9.5,5.5 L5.5,5.5 L5.5,9.5 L5.5,10 L4.5,10 L4.5,9.5 L4.5,5.5 L0.5,5.5 L0,5.5 L0,4.5 L0.5,4.5 L4.5,4.5 L4.5,0.5 L4.5,0 L5.5,0 L5.5,0.5 L5.5,4.5 Z"/>
                 </svg>
             </span>
           Create Participant
-        </button>
+        </button>-->
       </div>
     </div>
     <br>
@@ -164,7 +164,7 @@
               
                   <th class="info">name</th>
               
-                <th class="info-actions">Actions</th>
+                <!--<th class="info-actions">Actions</th>-->
             </tr>
           </thead>
           <tbody>
@@ -174,7 +174,7 @@
                   <td class="participant-properties">{{participant.regulatorID}}</td>
               
                   <td class="participant-properties">{{participant.name}}</td>
-              
+              <!--
               <td>
                 <button (click)="getForm(participant.regulatorID);" type="button" class="btn btn-update" data-toggle="modal" data-target="#updateParticipantModal">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -199,7 +199,7 @@
                    c1.7,0,3-1.3,3-3S64.5,10.3,62.9,10.3z M43.3,10.3H22.6V6h20.7L43.3,10.3L43.3,10.3z"/>
                  </svg>
                 </button>
-              </td>
+              </td>-->
             </tr>
           </tbody>
         </table>
