--- a/angular-app/src/app/app.component.css
+++ b/angular-app/src/app/app.component.css
@@ -11,6 +11,11 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+ .img-p{
+     position:absolute;
+     top: 1px;
+     right:1px;
+ }
 .container-fluid {
     display: grid;
     margin-left: 72px;
