--- a/angular-app/src/app/home/home.component.css
+++ b/angular-app/src/app/home/home.component.css
@@ -14,3 +14,17 @@
 body {
     background-color: red;
 }
+
+img.bg{
+    min-height: 90%;
+    min-width: 1024px;
+    width:90%;
+    height: auto;
+    position:relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    top:30;
+    left:5;
+    bottom:20;
+    right:5;
+}
