--- a/angular-app/src/app/home/home.component.html
+++ b/angular-app/src/app/home/home.component.html
@@ -12,7 +12,6 @@
  limitations under the License.
 -->
 <div class="container">
-	<div class="jumbotron">
-		<h1>angular-app</h1>
-	</div>
+	<!--<div class="jumbotron"><h1>angular-app</h1></div>-->
+	<img [src]="url" alt="background" class="bg" style = "background-size: cover">
 </div>
