take two images off

--- a/angular-app/src/app/about/about.component.html
+++ b/angular-app/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="row">  
    <h3 style ="font-family: 'Source Sans Pro Light', sans-serif; ">
     Coupon Payment system developed with Hyperledger Composer.</h3>
-    <img [src]="url" alt="background" class="bg">
+    <!--<img [src]="url" alt="background" class="bg">-->
   </div> 
 
   
